# usp-kubo

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: index.html  usp-kubo-analysis.md  usp-kubo-plan.md
usp-api/: Cargo.toml
usp-api/src/: main.rs
usp-cli/: Cargo.toml
usp-cli/src/: daemon.rs  main.rs
usp-core/: Cargo.toml
usp-core/src/: config.rs  error.rs  hub.rs  lib.rs  policy.rs  router.rs  types.rs
usp-core/src/backends/: cloud.rs  decentralized.rs  local.rs  mod.rs  p2p.rs
usp-core/src/utils/: cache.rs  chunker.rs  cid.rs  mod.rs  retry.rs
usp-core/tests/: integration_tests.rs
