[workspace]
resolver = "2"
members = [
    "usp-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["USP Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# cid removed due to yanked dependency
# cid = { version = "0.10", features = ["serde"] }
multihash = "0.19"
hex = "0.4"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.10"
lru = "0.12"
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# P2P
libp2p = { version = "0.53", features = ["tcp", "quic", "yamux", "noise", "gossipsub", "mdns"] }
