[workspace]
resolver = "2"
members = [
    "usp-core",
    "usp-cli",
]

[workspace.metadata.clippy]
# Clippy lint thresholds
cognitive-complexity-threshold = 30
too-many-arguments-threshold = 10

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["USP Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
multihash = "0.19"
hex = "0.4"
tempfile = "3.10"
lru = "0.12"
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# P2P
libp2p = { version = "0.53", features = ["tcp", "quic", "yamux", "noise", "gossipsub", "mdns", "kad", "identify", "macros", "tokio", "request-response"] }

# S3 client (HTTP + SigV4)
reqwest = { version = "0.11", features = ["rustls-tls", "stream", "multipart", "json"] }
hmac = "0.12"
url = "2.5"
