[package]
name = "usp-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "usp-api"
path = "src/main.rs"

[dependencies]
usp-core = { path = "../usp-core" }
tokio = { workspace = true, features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
