[package]
name = "usp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "usp"
path = "src/main.rs"

[dependencies]
usp-core = { path = "../usp-core" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[dev-dependencies]
tempfile = { workspace = true }
